--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
         "start": "node server.js",
         "lint": "eslint **/*.js --quiet",
         "fix": "eslint --fix .",
-        "test": "npm run lint && NODE_ENV=test mocha -u tdd --reporter spec --exit"
+        "test": "npm run lint && NODE_ENV=test mocha -u tdd --reporter spec --exit",
+        "scss-compile": "node-sass public/scss -o public/css"
     },
     "license": "ISC",
     "dependencies": {
@@ -16,6 +17,8 @@
         "express": "^4.16.3",
         "express-handlebars": "^3.0.0",
         "mysql2": "^1.5.3",
+        "node-sass": "^4.9.4",
+        "scss-compile": "^0.1.7",
         "sequelize": "^4.38.0"
     },
     "devDependencies": {
