--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "express": "^4.16.3",
         "express-handlebars": "^3.0.0",
         "mysql2": "^1.6.3",
+        "node-sass": "^4.10.0",
         "sequelize": "^4.41.0"
     },
     "devDependencies": {
