Finished user-input frontend route

--- a/config/config.json
+++ b/config/config.json
@@ -1,7 +1,7 @@
 {
     "development": {
         "username": "root",
-        "password": "root",
+        "password": "",
         "database": "Project2",
         "host": "localhost",
         "dialect": "mysql"
