--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,35 +9,29 @@
         "prettier"
       ],
     "rules": {
-        "no-duplicate-case":"error",
-        "no-empty":"error",
-        "no-extra-semi":"error",
-        "no-func-assign": "error",
-        "no-irregular-whitespace":"error",
-        "no-unreachable": "error",
-        "curly": "error",
-        "dot-notation": "error",
-        "eqeqeq": "error",
-        "no-empty-function": "error",
-        "no-multi-spaces": "error",
-        "no-unused-vars": "error",
-        "camelcase": "error",
-        "indent": [
-            "error",
-            2
-        ],
-        "linebreak-style": [
-            "error",
-            "unix"
-        ],
+        "no-duplicate-case":"warn",
+        "no-empty":"warn",
+        "no-extra-semi":"warn",
+        "no-func-assign": "warn",
+        "no-irregular-whitespace":"warn",
+        "no-unreachable": "warn",
+        "curly": "warn",
+        "dot-notation": "warn",
+        "eqeqeq": "warn",
+        "no-empty-function": "warn",
+        "no-multi-spaces": "warn",
+        "no-unused-vars": "warn",
+        "camelcase": "warn",
+
+     
         "quotes": [
-            "error",
+            "warn",
             "double"
         ],
         "semi": [
-            "error",
+            "warn",
             "always"
         ],
-        "prettier/prettier": "error"
+
     }
 }
