--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "express-handlebars": "^3.0.0",
         "mysql2": "^1.6.3",
         "node-sass": "^4.10.0",
+        "request": "^2.88.0",
         "sequelize": "^4.41.0"
     },
     "devDependencies": {
